{
    "name": "InputActions",
    "maps": [
        {
            "name": "GameMap",
            "id": "c6000f15-4cf8-419d-9161-dbd6d662c788",
            "actions": [
                {
                    "name": "MapScroll",
                    "type": "Value",
                    "id": "af871790-c733-4203-9fa3-a1ee35c04168",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MapZoom",
                    "type": "Value",
                    "id": "3146db96-ef26-4bfd-a834-456dc7360e44",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MapZoomIncrement",
                    "type": "Value",
                    "id": "af5129d0-e777-490a-82a2-4ca73ac643f6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MapRotate",
                    "type": "Value",
                    "id": "a8334952-2fe6-4e73-846f-9a571c0e21b3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "8eb1095a-1c1b-4492-b840-9aab976d1fd7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapScroll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "38bf2d86-f6c3-435c-8ed4-5f1aa2b835c6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "450d1b57-01bf-4e0e-b634-8af17cc17611",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "320c2149-83f0-4873-8436-8fafe0b6f8d3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "343fde38-510c-44ed-92bb-4a8da3366d3c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow Keys",
                    "id": "39b5e220-5eb8-4196-8703-74962c2be57d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapScroll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4894389a-fba4-4403-a29e-99d6a80eec46",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cc6e7ae9-23ab-4123-8e08-ba50fc35be82",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4e6bc2ab-60c0-46d4-b546-00daa60ea02e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e04dfb5e-84d0-47ad-888c-b04978ed504c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c4c0aed4-d350-4287-a0fc-e1b7586ff1d4",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Scale(factor=0.0008333334)",
                    "groups": "Keyboard",
                    "action": "MapZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Q & E",
                    "id": "ad2934ea-faaf-4231-909c-207352349691",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapRotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4824e554-69ef-4b44-bfe8-cedb1f27a6b7",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapRotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "380c6916-21cc-47f6-b0f6-e83aea2f5e24",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapRotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Plus & Minus",
                    "id": "7e1f0e5c-a687-4804-aedf-56ee6d7d8218",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "Scale(factor=0.008333334)",
                    "groups": "",
                    "action": "MapZoomIncrement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "280896e3-f716-451c-a694-c6ed91b246d5",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapZoomIncrement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "76f96ac9-4310-46c3-b720-3a5e21d2beee",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MapZoomIncrement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}